--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "inversify": "^4.13.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.1"
   },
   "jest": {
