--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watchAll",
     "build": "webpack",
     "watch": "webpack --watch",
+    "coverage": "jest --coverage",
     "start": "webpack-dev-server --open"
   },
   "keywords": [],
